# docs/swagger.json
@@ -1686,6 +1686,12 @@
                         "description": "bitrate kbps",
                         "name": "bitrate",
                         "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "seek position in seconds",
+                        "name": "seek",
+                        "in": "query"
                     }
                 ],
                 "responses": {
